k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chat-ingress
  namespace: chat-app

spec:
  ingressClassName: nginx

  rules:
  - host: chatapp.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: backend
            port:
              number: 8080
